1998-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* config/acconfig.h: add "#undef HAVE_WRITEV_DECL".

1998-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* NEWS: document new force-bump, force-no-bump and unforce-bump
	command in amadmin.

1998-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/holding.c (size_holding_files): new function to
	return the sum of the size of all chunk of an image.
	* server-src/holding.h (size_holding_files): declare.
	* server-src/driver.c (adjust_diskspace): use size_holding_files
	instead of doing a stat of only the first chunk.

1998-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c: new force-bump, force-no-bump and unforce-bump
	command.
	* man/amadmin.8.in: document them.

1998-12-05  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/FAQ (large filesystems): fixed reference to results missing
	(results missing): updated to 64Kb UDP packets

1998-12-04  Mike Grupenhoff <kashmir@munge.com>

	* common-src/amanda.h: implement WIFSIGNALED() if not already
	defined
	* server-src/amcheck.c: ream out compat definitions of WEXITSTATUS(),
	WTERMSIG(), and WIFSIGNALED().  These are already handled in amanda.h
	* server-src/changer.c: ditto

1998-12-03  Mike Grupenhoff <kashmir@munge.com>

	* common-src/bsd-security.c (recv_security_ok): only check for
	a reserved port for REQ packets

1998-12-03  Mike Grupenhoff <kashmir@munge.com>

	* common-src/bsd-security.c (recvpkt_callback): only compare
	the sin_addr and sin_port fields in the sockaddr when determining
	what handle an incoming packet belongs to.
	* common-src/bsd-security.c (pkthdr2str): use %s for the handle,
	since it's a string.

1998-12-03  Mike Grupenhoff <kashmir@munge.com>

	* common-src/bsd-security.c (bsd_sendpkt): newline-terminate
	the 'SECURITY USER' line in the packet
	* common-src/bsd-security.c (check_user): fix many bugs
	in the USE_AMANDAHOSTS case
